# aoc-2023-python

./: .gitignore  README.md  aoc.py  devenv.nix  pyproject.toml
aoc_2023_python/aoc_days/: day01.py  day02.py  day03.py
aoc_2023_python/lib/: classes.py  consts.py  helpers.py
