[tool.poetry]
name = "aoc-2023-python"
version = "0.1.0"
description = "Advent of Code 2023 in Python"
authors = ["TimekillerTK <erwartungen@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^23.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pyright = "^1.1.337"
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"

exclude = [
    "**/node_modules",
    "**/__pycache__",
    "venv/",
    ".venv/",
    ".devenv/"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.ruff]
# E & F - defaults
# W     - optional warnings (for example trailing whitespace)
# C90   - code complexity
# ANN   - enforce strict type annotation
# G     - should not have f-strings in logs
# TRY200 - checks if raise SystemExit() from err
select = ["E", "F", "W", "C90", "ANN", "G", "TRY200"]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]